@@ -5,4 +5,8 @@
 	
 	<string id="32019">Default Video Stream</string>
 
+	<string id="32020">Willow User Name</string>
+
+	<string id="32021">Willow Password</string>
+
 </strings>
